kubernetes/apps/ai/kokoro/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.ajgon.casa/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kokoro-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: kokoro
  egress:
    - toFQDNs:
        - matchName: cas-server.xethub.hf.co
        - matchName: huggingface.co
        - matchName: transfer.xethub.hf.co
        - matchName: us.aws.cdn.hf.co
        - matchName: raw.githubusercontent.com
        - matchName: github.com
        - matchName: pypi.org
      toPorts:
        - ports:
            - port: "443"
    - toFQDNs:
        - matchName: ip1.dynupdate.no-ip.com
        - matchName: ipv4.icanhazip.com
      toPorts:
        - ports:
            - port: "80"
